<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_experience"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tutor_session_name"
        android:text="@string/session_info_card_tutor_name"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tutor_session_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/navigationBarColor"
        android:textSize="20sp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        tools:text="Mitchell"/>

    <TextView
        android:id="@+id/tutor_session_duration"
        android:text="@string/session_info_card_session_length"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tutor_session_duration_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="@color/navigationBarColor"
        tools:text="10"/>

    <TextView
        android:id="@+id/tutor_session_additional_comment"
        android:text="@string/session_info_card_comment"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tutor_session_additional_comment_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textSize="20sp"
        android:textColor="@color/navigationBarColor"
        tools:text="comment"/>

    <TextView
        android:id="@+id/tutor_session_rating"
        android:text="@string/session_info_card_tutor_rating"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="5"
        android:stepSize="0.1"
        android:isIndicator="true" />

</LinearLayout>